--- a/templates/airline-staff/airline-staff-dashboard.html
+++ b/templates/airline-staff/airline-staff-dashboard.html
@@ -12,7 +12,7 @@
     
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="{{url_for('home')}}">Home</a></li>
             <li><a href="{{ url_for('view_flights') }}">Flights</a></li>
             <li><a href="{{url_for('passenger_list')}}">Passengers</a></li>
             <li><a href="{{url_for('register_air')}}">insert</a></li>
