--- a/templates/airline-staff/add-airplane.html
+++ b/templates/airline-staff/add-airplane.html
@@ -10,7 +10,7 @@
 <body>
     <div id="navbar" align="left">
         <div id="nav-elements">
-            <a href="#">Home</a>
+            <a href="{{url_for('home')}}">Home</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
         </div>
