--- a/templates/main-login.html
+++ b/templates/main-login.html
@@ -8,7 +8,7 @@
 <body>
     <div id="navbar" align="left">
         <div id = "navelements">
-         <a href="#">Home</a>
+         <a href="{{url_for('home')}}">Home</a>
          <a href="#">About</a>
          <a href="#">Contact</a>
         </div>
