--- a/templates/airline-staff/change-flight-status.html
+++ b/templates/airline-staff/change-flight-status.html
@@ -9,7 +9,7 @@
 <body>
     <div id="navbar" align="left">
         <div id="nav-elements">
-            <a href="#">Home</a>
+            <a href="{{url_for('home')}}">Home</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
         </div>
