--- a/templates/airline-staff/airline-staff-dashboard.html
+++ b/templates/airline-staff/airline-staff-dashboard.html
@@ -16,8 +16,8 @@
             <li><a href="{{ url_for('view_flights') }}">Flights</a></li>
             <li><a href="{{url_for('passenger_list')}}">Passengers</a></li>
             <li><a href="{{ url_for('view_staff') }}">Staff</a></li>
-            <li><a href="{{url_for('register_air')}}">insert</a></li>
-            <li><a href="#">Reports</a></li>
+            <li><a href="{{url_for('register_air')}}">Create</a></li>
+            <li><a href="{{url_for('track_revenue')}}">Reports</a></li>
             <li><a href="{{url_for('agent_actions')}}">Booking Agents</a></li>
             <li><a href="{{ url_for('logout') }}">Logout</a></li>
         </ul>
