--- a/templates/airline-staff/view-flights.html
+++ b/templates/airline-staff/view-flights.html
@@ -46,7 +46,9 @@
             <th>Airline Name</th>
             <th>Departure Airport</th>
             <th>Arrival Airport</th>
+            <th>Departure Date</th>
             <th>Departure Time</th>
+            <th>Arrival Date</th>
             <th>Arrival Time</th>
             <th>Airplane ID</th>
             <th>Price</th>
@@ -59,7 +61,9 @@
             <td>{{ flight.Airline_name }}</td>
             <td>{{ flight.Departure_Airport }}</td>
             <td>{{ flight.Arrival_Airport }}</td>
+            <td>{{ flight.Departure_date }}</td>
             <td>{{ flight.Departure_hr }}:{{ flight.Departure_min }}</td>
+            <td>{{ flight.Arrival_date }}</td>
             <td>{{ flight.Arrival_hr }}:{{ flight.Arrival_min }}</td>
             <td>{{ flight.Airplane_ID }}</td>
             <td>{{ flight.Price }}</td>
