--- a/templates/booking-agent/booking-agent-view-flights.html
+++ b/templates/booking-agent/booking-agent-view-flights.html
@@ -20,7 +20,9 @@
             <th>Departure Airport</th>
             <th>Arrival Airport</th>
             <th>Arrival City</th>
+            <th>Departure Date</th>
             <th>Departure Time</th>
+            <th>Arrival Date</th>
             <th>Arrival Time</th>
             <th>Price</th>
             <th>Status</th>
@@ -34,7 +36,9 @@
             <td>{{ ticket_flight.Departure_Airport }}</td>
             <td>{{ ticket_flight.Arrival_Airport }}</td>
             <td>{{ ticket_flight.Arrival_City }}</td>
+            <td>{{ ticket_flight.Departure_date }}</td>
             <td>{{ ticket_flight.Departure_hr }}:{{ ticket_flight.Departure_min }}</td>
+            <td>{{ ticket_flight.Arrival_date }}</td>
             <td>{{ ticket_flight.Arrival_hr }}:{{ ticket_flight.Arrival_min }}</td>
             <td>{{ ticket_flight.Price }}</td>
             <td class="{{ 'text-green' if ticket_flight.Status == 'Upcoming' else 'text-red' if ticket_flight.Status == 'Cancelled' else 'text-yellow' if ticket_flight.Status == 'Delayed' else '' }}">{{ ticket_flight.Status }}</td>
