--- a/templates/customer/customer-view-flights.html
+++ b/templates/customer/customer-view-flights.html
@@ -20,7 +20,9 @@
             <th>Departure Airport</th>
             <th>Arrival Airport</th>
             <th>Arrival City</th>
+            <th>Departure Date</th>
             <th>Departure Time</th>
+            <th>Arrival Date</th>
             <th>Arrival Time</th>
             <th>Price</th>
             <th>Purchase Date</th>
@@ -35,7 +37,9 @@
             <td>{{ ticket_flight.Departure_Airport }}</td>
             <td>{{ ticket_flight.Arrival_Airport }}</td>
             <td>{{ ticket_flight.Arrival_City }}</td>
+            <td>{{ ticket_flight.Departure_date }}</td>
             <td>{{ ticket_flight.Departure_hr }}:{{ ticket_flight.Departure_min }}</td>
+            <td>{{ ticket_flight.Arrival_date }}</td>
             <td>{{ ticket_flight.Arrival_hr }}:{{ ticket_flight.Arrival_min }}</td>
             <td>{{ ticket_flight.Price }}</td>
             <td>{{ ticket_flight.Purchase_date }}</td>
