--- a/templates/customer/track-spending.html
+++ b/templates/customer/track-spending.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="navbar">
-        <a href="#">Home</a>
+        <a href="{{url_for('home')}}">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
     </div>
